# Windows-MCP-Agent

./: CONTRIBUTING.md  README.md  client.py  manifest.json  pyproject.toml  requirements.txt  server.py
docs/: index.html  search.js
docs/src/agent/: prompt.html  tool_agent.html  tools.html
docs/src/agent/prompt/: service.html
docs/src/agent/tool_agent/: ApiToolAgent.html  GenericToolAgent.html  OllamaToolAgent.html  ToolAgent.html
docs/src/agent/tools/: windows.html
docs/src/agent/tools/windows/: app_tools.html  input_tools.html  system_tools.html  web_tools.html
other/: OllamaAgent.py  WindowsMCPOllamaToolAgent2.py  Windows_mcp_openwebui.py  main.py
src/agent/: __init__.py  service.py  utils.py
src/agent/prompt/: service.py
src/agent/registry/: service.py
src/agent/tool_agent/: ApiToolAgent.py  GenericToolAgent.py  OllamaToolAgent.py  ToolAgent.py
src/agent/tools/: __init__.py
src/agent/tools/windows/: __init__.py  app_tools.py  input_tools.py  system_tools.py  web_tools.py
src/desktop/: __init__.py  config.py  views.py
src/tree/: __init__.py  config.py  views.py
