[project]
name = "Windows-MCP-Agent"
version = "0.1.0"
description = "Windows-MCP-Agent 是基于 Windows-MCP 的强大自动化代理智能体，在保留其核心特性的同时优化了项目结构，并提供更强的扩展能力。通过将 Windows 端工具统一整理为集合，并支持用户自定义扩展（如 Web 浏览器集成），它全面提升了大语言模型在 Windows 系统中的自动化 易用性、可扩展性与可维护性。"
authors = [
    { name = "xskjya", email = "xskj13142024@163.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/xskjya" }
keywords = ["windows", "mcp", "ai", "desktop","ai agent"]
requires-python = ">=3.13"

